--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     implementation "androidx.fragment:fragment-ktx:1.4.0"
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha02")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha02")
+
 }
